--- a/Models/Speech_LLM/2023.05.30_Make-A-Voice.md
+++ b/Models/Speech_LLM/2023.05.30_Make-A-Voice.md
@@ -28,17 +28,17 @@
 
 ## Abstract: 摘要
 
-> Various applications of voice synthesis have been developed independently despite the fact that they generate "voice" as output in common. 
-> In addition, the majority of voice synthesis models currently rely on annotated audio data, but it is crucial to scale them to self-supervised datasets in order to effectively capture the wide range of acoustic variations present in human voice, including speaker identity, emotion, and prosody. 
-> In this work, we propose Make-A-Voice, a unified framework for synthesizing and manipulating voice signals from discrete representations. 
-> Make-A-Voice leverages a "coarse-to-fine" approach to model the human voice, which involves three stages: 
-> 1) semantic stage: model high-level transformation between linguistic content and self-supervised semantic tokens, 
-> 2) acoustic stage: introduce varying control signals as acoustic conditions for semantic-to-acoustic modeling, and 
-> 3) generation stage: synthesize high-fidelity waveforms from acoustic tokens. 
-> 
-> Make-A-Voice offers notable benefits as a unified voice synthesis framework: 
-> 1) Data scalability: the major backbone (i.e., acoustic and generation stage) does not require any annotations, and thus the training data could be scaled up. 
-> 2) Controllability and conditioning flexibility: we investigate different conditioning mechanisms and effectively handle three voice synthesis applications, including text-to-speech (TTS), voice conversion (VC), and singing voice synthesis (SVS) by re-synthesizing the discrete voice representations with prompt guidance. 
-> Experimental results demonstrate that Make-A-Voice exhibits superior audio quality and style similarity compared with competitive baseline models. 
-> Audio samples are available at [this https URL](https://make-a-voice.github.io/)
+Various applications of voice synthesis have been developed independently despite the fact that they generate "voice" as output in common. 
+In addition, the majority of voice synthesis models currently rely on annotated audio data, but it is crucial to scale them to self-supervised datasets in order to effectively capture the wide range of acoustic variations present in human voice, including speaker identity, emotion, and prosody. 
+In this work, we propose Make-A-Voice, a unified framework for synthesizing and manipulating voice signals from discrete representations. 
+Make-A-Voice leverages a "coarse-to-fine" approach to model the human voice, which involves three stages: 
+1) semantic stage: model high-level transformation between linguistic content and self-supervised semantic tokens, 
+2) acoustic stage: introduce varying control signals as acoustic conditions for semantic-to-acoustic modeling, and 
+3) generation stage: synthesize high-fidelity waveforms from acoustic tokens. 
+
+Make-A-Voice offers notable benefits as a unified voice synthesis framework: 
+1) Data scalability: the major backbone (i.e., acoustic and generation stage) does not require any annotations, and thus the training data could be scaled up. 
+2) Controllability and conditioning flexibility: we investigate different conditioning mechanisms and effectively handle three voice synthesis applications, including text-to-speech (TTS), voice conversion (VC), and singing voice synthesis (SVS) by re-synthesizing the discrete voice representations with prompt guidance. 
+Experimental results demonstrate that Make-A-Voice exhibits superior audio quality and style similarity compared with competitive baseline models. 
+Audio samples are available at [this https URL](https://make-a-voice.github.io/)
 
