--- a/Blogs/苏剑林/系列-低秩近似之路.md
+++ b/Blogs/苏剑林/系列-低秩近似之路.md
@@ -7,10 +7,11 @@
 因此, 在这个系列文章中, 笔者将试图系统梳理一下矩阵低秩近似相关的理论内容, 以补全对低秩近似的了解.
 
 ## 01. 伪逆 (Pseudo Inverse)
+
 <a id="01"></a>
 
-原文: <https://kexue.fm/archives/10366>
-时间: 2024.09.16
+- 原文: <https://kexue.fm/archives/10366>
+- 时间: 2024.09.16
 
 **伪逆** 也称为 **广义逆 (Generalized Inverse)**, 顾名思义是"广义的逆矩阵". 它实际上是逆矩阵的概念对于不可逆矩阵的推广.
 
@@ -49,6 +50,9 @@ $$
 $$
 
 ### 范数相关
+
+<details>
+<summary>正文</summary>
 
 对于向量 $x=(x_1,\cdots,x_m)$, 其 $p$-范数定义为:
 
@@ -103,7 +107,13 @@ $$
 \end{aligned}
 $$
 
+</details>
+<br>
+
 ### 矩阵求导
+
+<details>
+<summary>正文</summary>
 
 对于一个优化目标, 最理想的结果自然是能够通过求导求出解析解.
 可以发现对于前文定义的优化问题:
@@ -165,7 +175,13 @@ $$
     \dfrac{\partial \mathcal{L}}{\partial A} = 2 (AB-M)B^{\mathsf{T}}
 $$
 
+</details>
+<br>
+
 ### 基本结果
+
+<details>
+<summary>正文</summary>
 
 现在求出了 $\mathcal{L}$ 关于 $B$ 和 $A$ 的偏导数, 让它们等于零便可以得到相应的最优解.
 
@@ -195,7 +211,13 @@ $$
 这里介绍的伪逆实际上是最常见的 **Moore-Penrose 逆**, 除此之外还有 "Drazin 逆", "Bott-Duffin 逆" 等.
 此处不做展开.
 
+</details>
+<br>
+
 ### 一般形式
+
+<details>
+<summary>正文</summary>
 
 $$
     A^{\dagger} = (A^{\mathsf{T}}A)^{-1}A^{\mathsf{T}}\\
@@ -256,7 +278,13 @@ $$
 1. 首先和先前求出的 $A^\dagger$ 表达式具有直观且形式一致的理论优雅性;
 2. 其次, 形式上的一致性也使得 $A^{\mathsf{T}}A$ 可逆时 $A^\dagger$ 的一些性质得以保留, 从而在讨论 $A^\dagger$ 时无需考虑 $A^{\mathsf{T}}A$ 是否可逆.
 
+</details>
+<br>
+
 ### 数值计算
+
+<details>
+<summary>正文</summary>
 
 如果直接将上式用于数值计算, 就必须取一个足够小的 $\epsilon$ 然后把 $(A^{\mathsf{T}}A+\epsilon I_r)^{-1}$ 计算出来, 这样必然会面对严重的数值不稳定性.
 为了得到一个稳定的计算方式, 我们利用**实对称矩阵总可以正交对角化 (谱定理)** 这一特点, 对 $A^{\mathsf{T}}A$ 作如下分解:
@@ -330,5 +358,331 @@ $$
 \end{aligned}
 $$
 
+</details>
+<br>
+
 ---
+
+## 02. 奇异值分解 (Singular Value Decomposition, SVD) 
+
+<a id="02"></a>
+
+- 原文: https://kexue.fm/archives/10407
+- 时间: 2024.10.01
+
+伪逆关系到给定矩阵 $M$ 和 $A$ (或 $B$) 时优化目标 $\| AB - M \|_F^2$ 的最优解.
+本篇则关注 $A$, $B$ 都不给出时的最优解, 即
+
+$$
+    \arg\min_{A,B} \| A B - M \|_F^2
+$$
+
+其中 $A\in \mathbb{R}^{n\times r}$, $B\in \mathbb{R}^{r\times m}$, $M\in \mathbb{R}^{n\times m}$.
+
+即找到矩阵 $M$ 的最优 $r$ 秩近似 (秩不超过 $r$ 的最优近似).
+
+### 结论初探
+
+对于任意矩阵 $M\in \mathbb{R}^{n\times m}$, 都可以找到如下形式的奇异值分解 (Singular Value Decomposition, SVD):
+
+$$
+    M = U\Sigma V^{\mathsf{T}}
+$$
+
+其中 $U\in \mathbb{R}^{n\times n}$, $V\in \mathbb{R}^{m\times m}$, $\Sigma\in \mathbb{R}^{n\times m}$ 是非负对角矩阵, 
+
+$$
+    \Sigma_{i,j} = \begin{cases}
+        \sigma_i & i=j\\
+        0 & i\neq j
+    \end{cases}
+$$
+
+对角线元素默认从大到小排序, 即 $\sigma_1\geq\sigma_2\geq\cdots\geq 0$.
+这些对角线元素就称为奇异值 (Singular Value).
+
+从数值计算角度看, 可以只保留 $\Sigma$ 中的非零元素, 将 $U, \Sigma, V$ 的大小降低到 $n\times r$, $r\times m$, $r\times m$. $r$ 为矩阵 $M$ 的秩. 但保留完整矩阵更易于理论分析.
+
+SVD 对复矩阵同样成立, 但需要将正交矩阵改为酉矩阵, 转置改为共轭转置.
+但本文主要关注与机器学习关系更为密切的实矩阵结果.
+
+SVD 的基础理论包括存在性, 计算方法, 与最优低秩近似的练习等, 这些内容笔者后面都会给出自己的理解. #TODO
+
+在二维平面下, SVD 有非常直观的几何意义.
+二维的正交矩阵主要就是旋转 (还有反射, 但几何直观上可以不那么严谨), 所以 $Mx = U\Sigma V^{\mathsf{T}}x$ 就意味着任何对列向量 $x$ 的线性变换, 都可以分解为旋转+拉伸+旋转三个步骤.
+
+![](Images/2024.10.01.Fig.01.png)
+
+### 一些应用
+
+不管是理论分析还是数值计算, SVD 都有非常广泛的应用, 其背后的原理之一就是常用的矩阵/向量范数对正交变换具有不变性.
+所以 SVD 左右两个正交矩阵夹着中间一个对角矩阵的特点, 往往能用来将很多矩阵相关的优化目标转换为等价的非负对角矩阵特例, 起到简化问题的作用.
+
+#### 伪逆通解
+
+先前求解伪逆的通解时:
+
+$$
+    A^\dagger = \arg\min_{B\in \mathbb{R}^{r\times n}} \|AB-I_n\|_F^2,\quad A\in \mathbb{R}^{n\times r}
+$$
+
+通过求导得到了 $A^\dagger$ 的表达式, 然后又推广到 $A$ 的秩小于 $r$ ($A^{\mathsf{T}}A$ 不可逆) 的情形.
+
+但如果引入了 SVD, 那么问题就简化得多.
+可以将 $A$ 分解为 $U\Sigma V^{\mathsf{T}}$, 然后将 $B$ 表示为 $VZU^{\mathsf{T}}$, 注意没有规定 $Z$ 是对角阵, 所以 $B=VZU^{\mathsf{T}}$ 是可以做到的.
+因此
+
+\[
+    \begin{aligned}
+        \min_{B} \| AB-I_n \|_F^2 &= \min_{Z} \| U\Sigma V^{\mathsf{T}} VZU^{\mathsf{T}} - I_n \|_F^2\\
+        &= \min_Z \| U(\Sigma Z - I_n)U^{\mathsf{T}} \|_F^2\\
+        &= \min_Z \| \Sigma Z - I_n \|_F^2\\
+    \end{aligned}
+\]
+
+最后一个等号是基于 "正交变换不改变 $F$ 范数", 这样问题就简化为对角阵 $\Sigma$ 的伪逆.
+
+下面用分块矩阵来表示 $\Sigma Z - I_n$:
+
+\[
+    \begin{aligned}
+        \Sigma Z-I_n &= \begin{pmatrix}\Sigma_{[:r,:r]}\\ 0_{(n-r)\times r}\end{pmatrix} \begin{pmatrix}Z_{[:r,:r]} & Z_{[:r,r:]}\end{pmatrix} - \begin{pmatrix}I_r & 0_{r \times (n-r)}\\ 0_{(n-r)\times r} & I_{n-r}\end{pmatrix}\\
+        &= \begin{pmatrix}\Sigma_{[:r,:r]}Z_{[:r,:r]}-I_r & \Sigma_{[:r,:r]}Z_{[:r,r:]}\\ 0_{(n-r)\times r} & -I_{n-r}\end{pmatrix}\\
+    \end{aligned}
+\]
+
+从最后的形式可以看出, 要使得 $\Sigma Z-I_n$ 的 $F$ 范数最小, 唯一解 $Z_{[:r,:r]}=\Sigma_{[:r,:r]}^{-1}$, $Z_{[:r,r:]}=0_{r\times (n-r)}$.
+
+即 $Z$ 就是 $\Sigma^{\mathsf{T}}$ 的非零元素都取倒数后转置, 记为 $\Sigma^\dagger$.
+
+所以得到:
+
+$$
+    A = U\Sigma^\dagger V^{\mathsf{T}} \Rightarrow A^\dagger = V\Sigma^\dagger U^{\mathsf{T}}
+$$
+
+可以进一步证明这个结果也适用于秩小于 $r$ 的 $A$. 所以这是一个通用的形式, 一些教程也直接将之作为伪逆的定义.
+
+此外, 还可以观察到这个形式不区分左伪逆和右伪逆, 这表明同一个矩阵的左伪逆和右伪逆是相等的.
+
+#### 矩阵范数
+
+利用 "正交变换不改变 $F$ 范数" 的结论, 还可以得到:
+
+$$
+    \| M\|_F^2 = \| U\Sigma V^{\mathsf{T}} \|_F^2 = \| \Sigma \|_F^2 = \sum_{i=1}^{\min (n,m)} \sigma_i^2
+$$
+
+也就是**奇异值的平方和等于 $F$ 范数的平方**.
+
+除了 $F$ 范数, SVD 也可以用于计算谱范数. 谱范数是基于向量的范数诱导出来的谱范数, 定义为:
+
+$$
+    \| M\|_2 = \max_{\| x \| = 1} \| M x \|
+$$
+
+注意等号右端出现的范数都是向量范数 (模长, 2-范数), 因此上述定义是明确的.
+由于它是向量的 2-范数诱导出来的, 所以它也称为矩阵的 2-范数.
+
+数值上, 矩阵的谱范数等于它的最大奇异值, 即 $\| M \|_2 = \sigma_1$.
+
+要证明这一点, 只需要将 $M$ 进行 SVD, 然后代入谱范数的定义:
+
+$$
+    \max_{\| x \| = 1} \| M x \| = \max_{\| x \| = 1} \| U\Sigma V^{\mathsf{T}} x \| = \max_{\| y\| = 1} \| \Sigma y \|
+$$
+
+第二个等号正是利用了 "正交矩阵不改变向量范数" 的特点.
+
+现在相当于将问题简化为对角矩阵 $\Sigma$ 的谱范数, 这个较为简单, 设 $y=(y_1,\cdots,y_m)$, 那么
+
+$$
+    \| \Sigma y \|^2 = \sum_{i=1}^m \sigma_i^2 y_i^2 \leq \sum_{i=1}^m \sigma_1^2y_i^2 =\sigma_1^2 \sum_{i=1}^m y_i^2 = \sigma_1^2.
+$$
+
+所以 $\| \Sigma y \|$ 不超过 $\sigma_1$, 并且 $y=(1,0,\cdots,0)$ 时取到等号, 因此 $\| M \|_2 = \sigma_1$.
+
+对比 $F$ 范数的结果, 还可以发现下述结论恒成立:
+
+$$
+    \| M\|_2 \leq \| M \|_F
+$$
+
+#### 低秩近似
+
+回到最初求解 $M$ 的最优低秩近似, 将 $M$ 分解为 $U\Sigma V^{\mathsf{T}}$ 后, 可以写出:
+
+\[
+    \begin{aligned}
+        \| AB-M \|_F^2 &= \| UU^{\mathsf{T}}AB VV^{\mathsf{T}} - U\Sigma V^{\mathsf{T}} \|_F^2\\
+        &= \| U(U^{\mathsf{T}}AB V-\Sigma)V^{\mathsf{T}} \|_F^2\\
+        &= \| U^{\mathsf{T}}AB V-\Sigma \|_F^2\\
+    \end{aligned}
+\]
+
+注意 $U^{\mathsf{T}}AB V$ 仍可以代表任意秩不超过 $r$ 的矩阵, 所以通过 SVD 将矩阵 $M$ 的最优 $r$ 秩近似简化为非负对角矩阵 $\Sigma$ 的最优 $r$ 秩近似.
+
+在 [系列-对齐全量微调 (1)](系列-对齐全量微调.md) 中用相同的思路求解过一个类似的优化问题:
+
+<details>
+
+<summary>引用</summary>
+
+下面用 $G_0$ 代替 $\dfrac{\partial \mathcal{L}}{\partial W_0}$, 则目标函数可以写为:
+
+$$
+    \arg\min_{A_0,B_0}\left\| A_0 A_0^{\mathsf{T}} G_0 + G_0 B_0^{\mathsf{T}}B_0 - G_0 \right\|_F^2.
+$$
+
+当 $G_0$ 不是对角矩阵时, 将之进行 SVD 分解为 $U\Sigma V$, 其中 $U\in \mathbb{R}^{n\times n}, V\in \mathbb{R}^{m\times m}$ 为正交矩阵, $\Sigma\in \mathbb{R}^{n\times m}$ 为对角矩阵, 对角线元素非负且从大到小排列, 代入得到
+
+$$
+\begin{aligned}
+    &\left\| A_0 A_0^{\mathsf{T}} G_0 + G_0 B_0^{\mathsf{T}}B_0 - G_0 \right\|_F^2\\
+    =& \left\| A_0 A_0^{\mathsf{T}} U\Sigma V + U\Sigma V B_0^{\mathsf{T}}B_0 - U\Sigma V \right\|_F^2\\
+    =& \left\| \textcolor{red}{U U^{\mathsf{T}}} A_0 A_0^{\mathsf{T}} U\Sigma V + U\Sigma V B_0^{\mathsf{T}}B_0 \textcolor{red}{V^{\mathsf{T}}V} - U\Sigma V \right\|_F^2\\
+    =& \left\| \textcolor{red}{U}(\textcolor{red}{U^{\mathsf{T}}} A_0) (U^{\mathsf{T}}A_0)^{\mathsf{T}}\Sigma V + U\Sigma (B_0 V^{\mathsf{T}})^{\mathsf{T}}(B_0 \textcolor{red}{V^{\mathsf{T}}})\textcolor{red}{V} - U\Sigma V \right\|_F^2\\
+    =& \left\| U \textcolor{cyan}{[}(\textcolor{red}{U^{\mathsf{T}}} A_0) (U^{\mathsf{T}}A_0)^{\mathsf{T}}\Sigma + \Sigma (B_0 V^{\mathsf{T}})^{\mathsf{T}}(B_0 \textcolor{red}{V^{\mathsf{T}}}) - \Sigma\textcolor{cyan}{]} V \right\|_F^2\\
+    =& \left\| (\textcolor{red}{U^{\mathsf{T}}} A_0) (U^{\mathsf{T}}A_0)^{\mathsf{T}}\Sigma + \Sigma (B_0 V^{\mathsf{T}})^{\mathsf{T}}(B_0 \textcolor{red}{V^{\mathsf{T}}}) - \Sigma \right\|_F^2\\
+\end{aligned}
+$$
+
+</details>
+<br>
+
+这将原本一般矩阵 $M$ 的优化问题转化为 $M$ 是非负对角矩阵的特例, 降低了分析难度.
+若 $A,B$ 的秩不超过 $r$, 那么 $AA^{\mathsf{T}}M + MB^{\mathsf{T}}B$ 的秩顶多为 $2r$ (假设 $2r <\min (n,m)$), 所以原始问题也是求 $M$ 的最优 $2r$ 秩近似, 转化为求非负对角矩阵的最优 $2r$ 秩近似.
+
+### 理论基础
+
+在了解 SVD 的作用之后, 就需要补充一些理论证明.
+- 首先确保 SVD 的存在性;
+- 其次找出至少一种计算方案.
+
+这样 SVD 的各种应用才算是切实可行的.
+接下来用同一个过程将这两个问题一起解决.
+
+#### 谱定理
+
+首先需要引入一个"谱定理", 既可以说是 SVD 的特例, 也可以说是 SVD 的基础:
+
+**谱定理: 对于任意实对称矩阵 $M\in \mathbb{R}^{n\times n}$, 都存在谱分解 (特征值分解) $M=U\Lambda U^{\mathsf{T}}$, $U\in \mathbb{R}^{n\times n}$ 为正交矩阵, $\Lambda\in \mathbb{R}^{n}$ 为对角矩阵.**
+
+谱定理即断言任何实对称矩阵都可以被正交矩阵对角化, 这基于如下两点性质:
+1. 实对称矩阵的特征值和特征向量都是实的;
+2. 实对称矩阵的不同特征值对应的特征向量是正交的.
+
+这两点性质的证明其实很简单, 此处不再展开 #TODO 补充证明.
+
+基于这两点可以知道, 
+
+1. 如果实对称矩阵 $M$ 有 $n$ 个不同的特征值, 那么谱定理成立:
+   $$
+    Mu_i =\lambda_i u_i \Rightarrow M(u_1,\cdots,u_n)=(u_1,\cdots,u_n)\text{diag}(\lambda_1,\cdots,\lambda_n)\Rightarrow MU = U\Lambda
+   $$
+2. 如何将结论扩展到有相等特征值的情形.
+   在思考完整证明之前, 可以先从一个不严谨的角度理解, 这个不等特征值的结果是一定可以推广到一般情形的.
+   从数值角度看, 两个实数绝对相等的概率几乎为零, 所以几乎不需要考虑特征值相等的情形;
+   用更数学的话说, 就是特征值不等的实矩阵在全体实矩阵中稠密, 所以总可以找到一簇矩阵 $M_{\epsilon}$, 当 $\epsilon>0$ 时它的特征值两两不等, 当 $\epsilon\to 0$ 时它等于 $M$.
+   但这样一来, 每个 $M_{\epsilon}$ 都可以进行特征值分解, 取 $\epsilon\to 0$ 就得到 $M$ 的谱分解.
+   不幸的是, 上述这段话只能作为一个直观但不严谨的理解方式. 因为要将这段话转化为严格的证明还是很困难的.
+
+事实上, 严格证明谱定理的最简单方法可能是数据归纳法, 即在任意 $n-1$ 阶实对称方阵都可以谱分解的假设上, 证明 $M$ 也可以谱分解.
+
+证明的关键思路是将 $M$ 分解为某个特征向量及其 $n-1$ 维正交子空间, 从而可以应用归纳假设.
+具体来说, 设 $\lambda_1$ 是 $M$ 的一个非零特征值, 对应的特征向量为 $u_1$, 那么有 $Mu_1=\lambda_1 u_1$, 可以补充 $n-1$ 个和 $u_1$ 正交的单位向量 $Q=(q_2,\cdots, q_n)$, 使得 $(u_1, Q)$ 成为一个正交矩阵.
+
+现在考虑
+
+$$
+    \begin{pmatrix}u_1 & Q\end{pmatrix}^{\mathsf{T}} M \begin{pmatrix}u_1 &Q\end{pmatrix} = \begin{pmatrix}u_1^{\mathsf{T}}Mu_1 & u_1^{\mathsf{T}}MQ\\Q^{\mathsf{T}}Mu_1 & Q^{\mathsf{T}}MQ\end{pmatrix} = \begin{pmatrix}\lambda_1 & 0_{1\times (n-1)}\\0_{(n-1)\times 1} & Q^{\mathsf{T}}MQ\end{pmatrix}
+$$
+
+注意到 $Q^{\mathsf{T}}MQ$ 是 $n-1$ 阶方阵, 且明显是一个实对称矩阵, 根据假设可以谱分解为 $V\Lambda_2 V^{\mathsf{T}}$ (其中 $V$ 为 $n-1$ 维正交矩阵), 于是有:
+
+$$
+    (QV)^{\mathsf{T}} M QV = \Lambda_2
+$$
+
+根据这个结果, 可以考虑 $U=(u_1,QV)$, 可以验证它也是一个正交矩阵, 并且:
+
+$$
+    U^{\mathsf{T}} M U = \begin{pmatrix}u_1 & QV\end{pmatrix}^{\mathsf{T}} M \begin{pmatrix}u_1 &QV\end{pmatrix} = \begin{pmatrix}\lambda_1 & 0_{1\times (n-1)}\\0_{(n-1)\times 1} & \Lambda_2 \end{pmatrix}
+$$
+
+也就是 $U$ 正是可以将 $M$ 对角化的正交矩阵, 即 $M$ 可以完成谱分解. 从而完成了数学归纳法最关键的一步.
+
+#### 奇异分解
+
+在完成了谱定理的证明后, 可以正式证明 SVD 的存在性, 并给出一个实际计算的方案.
+
+不难发现谱分解和 SVD 之间的相似性, 但也有两点明显的区别:
+1. 谱分解只适用于实对称矩阵, SVD 适用于任意实矩阵;
+2. SVD 的对角阵 $\Sigma$ 是非负的, 但谱分解的 $\Lambda$ 未必.
+
+他们的具体联系在于, 若 $M$ 的 SVD 为 $U\Sigma V^{\mathsf{T}}$, 那么:
+
+$$
+    MM^{\mathsf{T}} = U\Sigma V^{\mathsf{T}}V\Sigma^{\mathsf{T}}U^{\mathsf{T}} = U\Sigma \Sigma^{\mathsf{T}}U^{\mathsf{T}} 
+$$
+
+$$
+    M^{\mathsf{T}}M = V\Sigma^{\mathsf{T}}U^{\mathsf{T}}U\Sigma V^{\mathsf{T}} = V\Sigma^{\mathsf{T}}\Sigma V^{\mathsf{T}}
+$$
+
+注意 $\Sigma \Sigma^{\mathsf{T}}$ 和 $\Sigma^{\mathsf{T}} \Sigma$ 都是对角矩阵, 所以这意味着 $MM^{\mathsf{T}}$ 的谱分解为 $U\Sigma\Sigma^{\mathsf{T}}U^{\mathsf{T}}$, 而 $M^{\mathsf{T}}M$ 的谱分解为 $V\Sigma^{\mathsf{T}}\Sigma V^{\mathsf{T}}$.
+
+这看起来将 $MM^{\mathsf{T}}$ 和 $M^{\mathsf{T}}M$ 分别做谱分解就可得到 $M$ 的 SVD 了?
+确实如此, 这可以作为 SVD 的一种计算方式, 但无法直接通过它证明这样得出的 $U,\Sigma,V$ 满足 $M=U\Sigma V^{\mathsf{T}}$.
+
+解决问题的关键是只对 $MM^{\mathsf{T}}$, $M^{\mathsf{T}}M$ 之一做谱分解, 然后通过另外的方法构造另一侧的正交矩阵.
+
+不失一般性, 我们设 $M$ 的秩为 $r\leq m$, 考虑对 $M^{\mathsf{T}}M$ 做谱分解 $V\Lambda V^{\mathsf{T}}$, 注意 $M^{\mathsf{T}}M$ 是一个半正定矩阵, 所以 $\Lambda$ 是非负的, 并且假设对角线元素已经从大到小排列, 秩 $r$ 意味着只有前 $r$ 个 $\lambda_i$ 大于零.
+
+我们定义:
+
+$$
+    \Sigma_{[:r,:r]} = (\Lambda_{[:r,:r]})^{1/2}, \quad U_{[:n,:r]}=MV_{[:m,:r]}\Sigma_{[:r,:r]}^{-1}
+$$
+
+可以验证:
+
+$$
+    \begin{aligned}
+        U_{[:n,:r]}^{\mathsf{T}}U_{[:n,:r]}
+        &=(MV_{[:m,:r]}\Sigma_{[:r,:r]}^{-1})^{\mathsf{T}}(MV_{[:m,:r]}\Sigma_{[:r,:r]}^{-1})\\
+        &=\Sigma_{[:r,:r]}^{-1}V_{[:m,:r]}^{\mathsf{T}}M^{\mathsf{T}}MV_{[:m,:r]}\Sigma_{[:r,:r]}^{-1}\\
+        &=\Sigma_{[:r,:r]}^{-1}V_{[:m,:r]}^{\mathsf{T}}V\Lambda V^{\mathsf{T}}V_{[:m,:r]}\Sigma_{[:r,:r]}^{-1}\\
+        &=\Sigma_{[:r,:r]}^{-1}I_{[:r,:m]}\Lambda I_{[:m,:r]}\Sigma_{[:r,:r]}^{-1}\\
+        &=\Sigma_{[:r,:r]}^{-1}\Lambda_{[:r,:r]}\Sigma_{[:r,:r]}^{-1}\\
+        &=I_r
+    \end{aligned}
+$$
+
+也就是说 $U_{[:n,:r]}$ 是正交矩阵的一部分.
+
+接着我们有:
+
+$$
+    U_{[:n,:r]}\Sigma_{[:r,:r]}V_{[:m,:r]}^{\mathsf{T}}
+    = [M V_{[:m,:r]}\Sigma_{[:r,:r]}^{-1}]\Sigma_{[:r,:r]}V_{[:m,:r]}^{\mathsf{T}}=MV_{[:m,:r]}V_{[:m,:r]}^{\mathsf{T}}
+$$
+
+注意到 $MVV^{\mathsf{T}}=M$, 而 $V_{[:m,:r]}$ 是 $V$ 的前 $r$ 列. 
+
+根据 $M^{\mathsf{T}}M=V\Lambda V^{\mathsf{T}}$ 有 $(MV)^{\mathsf{T}} MV=\Lambda$
+
+记 $V=(v_1,\cdots, v_m)$, 那么有 $\| Mv_i \|^2=\lambda_i$, 当 $i>r$ 时 $\lambda_i=0$, 此时 $Mv_i$ 为零向量.
+
+所以 $M=MVV^{\mathsf{T}}=MV_{[:m,:r]}V_{[:m,:r]}^{\mathsf{T}}$, 即 $U_{[:n,:r]}\Sigma_{[:r,:r]}V_{[:m,:r]}^{\mathsf{T}} = M$.
+
+这表明已经得到了 M 的 SVD 关键部分, 只需要将相应矩阵补零成相应大小, 就得到了完整的 SVD 形式.
+
+### 近似定理
+
+最后回到求 $M$ 的最优低秩近似问题.
+
+**如果 $M\in \mathbb{R}^{n\times m} = U\Sigma V^{\mathsf{T}}$, 那么 $M$ 的最优 $r$ 秩近似为 $U_{[:n,:r]}\Sigma_{[:r,:r]}V_{[:m,:r]}^{\mathsf{T}}$**
+
+这称为 Eckart-Young-Mirsky 定理.
 
